# uniapp-fastapi-mysql-starter

./: .1024  .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
backend/app/: admin.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  categories.py  orders.py  posts.py  products.py  stats.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  order.py  post.py  product.py  user.py
backend/app/db/: database.py
backend/app/models/: __init__.py  order.py  post.py  product.py  user.py
backend/app/schemas/: __init__.py  order.py  post.py  product.py  user.py
database/: init.sql
frontend/: .eslintrc.js  package-lock.json  package.json  vite.config.ts
frontend/src/: pages.json
frontend/src/pages/: debug.vue
frontend/src/pages/index/: index.vue
frontend/src/pages/posts/: detail.vue  index.vue
frontend/src/pages/products/: form.vue  index.vue
frontend/src/utils/: request.ts
scripts/: start.sh  stop.sh
